<resources>
    <string name="app_name">Link Analyzer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LINK ANALYZER</string>
    <string name="nav_header_subtitle">LET\'S DEBUG THIS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_signal">☣ 📶 </string>

    <string name="menu_home">Phone Info</string>
    <string name="menu_gallery">WiFi Details</string>
    <string name="menu_slideshow">WiFi Scan</string>
    <string name="local_scan">Local Scan</string>
    <string name="channel_graph">Channel Graph</string>
    <string name="time_graph">Time Graph</string>
    <string name="save_data">Save Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="details">\nWith the help of Link Analyzer app, users can easily identify their current Wi-Fi network and check the status of their connection. It can be useful for troubleshooting Wi-Fi connectivity issues, optimizing network performance, and diagnosing interference problems. This app also provides additional information such as the SSID, BSSID, FREQUENCY and MAC address of the Wi-Fi access point. This information can be used to identify specific Wi-Fi networks and access points and to configure network settings.</string>
    <string name="title">\nLink Analyzer an Opensource Android app for reporting Wi-Fi information</string>
    <string name="overall">\nOverall, the Link Analyzer app is a useful tool for users who want to better understand their Wi-Fi connection and diagnose network issues.</string>
    <string name="points">\n\u25BA Get Wi-Fi radio information \n\u25BA Get Cellular information \n\u25BA Ping the whole network\n\u25BA Different tyes of Graph for better Analysis \n\u25BA etc…</string>
    <string name="github_link">\n\nGithub Link \u25BA https://github.com/rajamrit-cs/link-analyzer</string>
    <string name="contact_us">\nPlease Contact us for any query at rajamrit.cs@gmail.com</string>
</resources>